# quarto-examples

./: README.md
appendix-csl/: .gitignore  README.md  _publish.yml  example.qmd
brand/brand-repo/: README.md  _brand.yml
brand/brand-simple/: README.md  README.qmd  _publish.yml  _quarto.yml  index.qmd
brand/brand-simple-dark-mode/: README.md  README.qmd  _brand-dark.yml  _brand.yml  _publish.yml  _quarto.yml  dashboard.qmd  index.qmd
callouts/collapse-default/: .gitignore  README.md  README.qmd  _about.qmd  _intro-to-example.qmd  _publish.yml  _quarto.yml  collapse-callout.lua  collapse-callout.qmd
computation-cells-options/: README.md  README.qmd  _publish.yml  _quarto.yml  index.qmd
html-math/: .gitignore  README.md  README.qmd  _publish.yml  _quarto.yml  html-math.qmd
multi-format/: .gitignore  README.md  _publish.yml  py-plotly-in-pdf.qmd  requirements.txt
renderings/: .gitignore  _publish.yml  _quarto.yml  altair.qmd  bokeh.qmd  flextable.qmd  ggiraph.qmd  ggplot.qmd  ggplot2.qmd  great-tables.qmd  gt.qmd  heatmaply.qmd  leaflet.qmd  matplotlib.qmd  plotly-python.qmd  plotly-r.qmd  plotnine.qmd  pygal.qmd  pyproject.toml  seaborn.qmd  thematic.qmd
revealjs/: _publish.yml  single-slide-selector.qmd
revealjs/callouts/: .gitignore  README.md  README.qmd  _publish.yml  _quarto.yml  default-styles.qmd
tables/: README.md  _publish.yml  _quarto.yml  tables-quarto-processing-opt-out.qmd
tabsets/tabsets-from-r-chunks/: .gitignore  README.md  README.qmd  _publish.yml  _quarto.yml  index.qmd
websites/include-absolute-paths/: .gitignore  _publish.yml  (+2 more)
(+21 files in other folders)
